<?xml version="1.0" encoding="utf-8" ?>
<resources>
    <string name="app_name">Soppo</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome_back_let_s_find_you_a_match">Welcome Back, Let\'s Find You a Match</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="or">Or</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? <b>Sign Up</b></string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_and_build_your_own_team">Welcome and Build Your Own Team</string>
    <string name="fullname">Fullname</string>
    <string name="phone">Phone</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account_sign_in">Already have an account? <b>Sign In</b></string>
    <string name="register">Register</string>
    <string name="verification_code_is_sending_to_your_email_please_check_your_email">Verification code is sending to your email, please check your email</string>
    <string name="resend_verification_code">Resend Verification Code?</string>
    <string name="resend">Resend</string>
    <string name="send">Send</string>
    <string name="home">Home</string>
    <string name="my_match">My Match</string>
    <string name="create_match">Create Match</string>
    <string name="team">Team</string>
    <string name="profile">Profile</string>
    <string name="futsal">Futsal</string>
    <string name="badminton">Badminton</string>
    <string name="match">Match</string>
    <string name="news">News</string>
    <string name="title">Title</string>
    <string name="location">Location</string>
    <string name="match_date">Match Date</string>
    <string name="play_time">Play Time</string>
    <string name="room_password">Room Password</string>
    <string name="if_you_check_this_password_is_required_for_join_the_match">*If you check this, password is required for join the match</string>
    <string name="description">Description</string>
    <string name="required">*Required</string>
    <string name="banner_image">Banner Image</string>
    <string name="create">Create</string>
    <string name="my_team">My Team</string>
    <string name="click_here_to_find_a_team">Click here to find a team</string>
    <string name="team_name">Team Name</string>
    <string name="team_description">Team Description</string>
    <string name="region">Region</string>
    <string name="since">Since</string>
    <string name="dd_mm_yyyy">dd-mm-yyyy</string>
    <string name="stats">Stats</string>
    <string name="win">Win</string>
    <string name="lose">Lose</string>
    <string name="draw">Draw</string>
    <string name="_0">0</string>
    <string name="player">Player</string>
    <string name="history_match">History Match</string>
    <string name="position">Position</string>
    <string name="name">Name</string>
    <string name="title_match">Title Match</string>
    <string name="date_and_time">Date and Time</string>
    <string name="change_date">Change Date</string>
    <string name="vs">VS</string>
    <string name="away">Away</string>
    <string name="request_join">Request Join</string>
    <string name="update">Update</string>
    <string name="click_here_to_create_team">Click here to create team</string>
    <string name="content">Content</string>
    <string name="author">Author</string>
    <string name="date_published">Date Published</string>
    <string name="find">Find</string>
    <string name="request">Request</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="please_fill_this_field">Please fill this field</string>
    <string name="field_password_and_confirm_password_not_same">Field password and confirm password not same</string>
    <string name="list_of_your_past_ongoing_and_upcoming_match">List of your past, ongoing and upcoming match</string>
    <string name="organizer">Organizer</string>
    <string name="result">Result</string>
    <string name="request_change_date">Request Change Date</string>
    <string name="cancel">Cancel</string>
    <string name="click_here_to_select_image">Click here to select image</string>
    <string name="find_your_opponent_and_win_the_game">Find your opponent and win the game</string>
    <string name="sport">Sport</string>
    <string name="join_existing_team">Join Existing Team</string>
    <string name="create_new_team">Create New Team</string>
    <string name="you_don_t_have_a_team_yet_you_can_either">You don\'t have a team yet. You can either:</string>
    <string name="find_people_and_build_your_team_now">Find People and build your team now</string>
    <string name="profile_image">Profile Image</string>
    <string name="manage_player">Manage Player</string>
    <string name="did_not_receive_verification_code">Did not receive Verification Code?</string>
    <string name="send_otp">Send OTP</string>
    <string name="what_game_do_you_wanna_play">What game do you wanna play?</string>
    <string name="view_all">View all</string>
</resources>