<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/myMatchFragment"
        android:enabled="true"
        android:icon="@drawable/ic_soccer_field"
        android:title="@string/my_match" />

    <item
        android:id="@+id/createMatchFragment"
        android:enabled="true"
        android:icon="@drawable/ic_round_add"
        android:title="@string/create_match" />

    <item
        android:id="@+id/teamFragment"
        android:enabled="true"
        android:icon="@drawable/ic_people"
        android:title="@string/team" />

    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />


</menu>