<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.team.TeamFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView10"
                style="@style/text24ExtaBoldBlue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_team"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView30"
                style="@style/text12LightBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/find_people_and_build_your_team_now"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <LinearLayout
                android:id="@+id/ll_find_team"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10">

                <TextView
                    style="@style/text18RegularBlack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/you_don_t_have_a_team_yet_you_can_either"
                    android:textAlignment="center" />

                <Button
                    android:id="@+id/btn_find_team"
                    style="@style/shapeButtonActive"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:padding="15dp"
                    android:text="@string/join_existing_team"
                    android:textAllCaps="false" />

                <TextView
                    style="@style/text18BoldBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:text="@string/or" />

                <Button
                    android:id="@+id/btn_create_team"
                    style="@style/shapeButtonActive"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/create_new_team"
                    android:textAllCaps="false" />
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10">

                <ImageView
                    android:id="@+id/iv_other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_ellipsis"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_logo_team"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView11"
                    style="@style/text24BoldBlack"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/team_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/iv_logo_team"
                    app:layout_constraintTop_toTopOf="@+id/iv_logo_team" />

                <TextView
                    style="@style/text14RegularBlack"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/team_description"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_logo_team"
                    app:layout_constraintEnd_toEndOf="@+id/textView11"
                    app:layout_constraintStart_toStartOf="@+id/textView11"
                    app:layout_constraintTop_toBottomOf="@+id/textView11" />

                <TextView
                    android:id="@+id/textView12"
                    style="@style/text14RegularBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/region"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_logo_team" />

                <TextView
                    android:id="@+id/textView14"
                    style="@style/text14BoldBlack"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:text="@string/region"
                    app:layout_constraintEnd_toEndOf="@+id/iv_logo_team"
                    app:layout_constraintEnd_toStartOf="@+id/textView13"
                    app:layout_constraintStart_toEndOf="@+id/textView12"
                    app:layout_constraintTop_toBottomOf="@+id/iv_logo_team" />

                <TextView
                    android:id="@+id/textView13"
                    style="@style/text14RegularBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/since"
                    app:layout_constraintEnd_toStartOf="@+id/textView15"
                    app:layout_constraintTop_toBottomOf="@+id/iv_logo_team" />

                <TextView
                    android:id="@+id/textView15"
                    style="@style/text14BoldBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/dd_mm_yyyy"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_logo_team" />

                <TextView
                    android:id="@+id/textView16"
                    style="@style/text24BoldBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/stats"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView12" />


                <TextView
                    android:id="@+id/textView19"
                    style="@style/text18RegularBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/win"
                    app:layout_constraintEnd_toStartOf="@+id/textView17"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView16" />

                <TextView
                    android:id="@+id/textView17"
                    style="@style/text18RegularBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lose"
                    app:layout_constraintEnd_toStartOf="@+id/textView18"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/textView19"
                    app:layout_constraintTop_toBottomOf="@+id/textView16" />


                <TextView
                    android:id="@+id/textView18"
                    style="@style/text18RegularBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/draw"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/textView17"
                    app:layout_constraintTop_toBottomOf="@+id/textView16" />

                <TextView
                    android:id="@+id/tv_win"
                    style="@style/text18BoldBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/_0"
                    app:layout_constraintEnd_toEndOf="@+id/textView19"
                    app:layout_constraintStart_toStartOf="@+id/textView19"
                    app:layout_constraintTop_toBottomOf="@+id/textView19" />

                <TextView
                    android:id="@+id/tv_lose"
                    style="@style/text18BoldBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/_0"
                    app:layout_constraintEnd_toEndOf="@+id/textView17"
                    app:layout_constraintStart_toStartOf="@+id/textView17"
                    app:layout_constraintTop_toBottomOf="@+id/textView17" />

                <TextView
                    android:id="@+id/tv_draw"
                    style="@style/text18BoldBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/_0"
                    app:layout_constraintEnd_toEndOf="@+id/textView18"
                    app:layout_constraintStart_toStartOf="@+id/textView18"
                    app:layout_constraintTop_toBottomOf="@+id/textView18" />


                <TextView
                    android:id="@+id/textView22"
                    style="@style/text24BoldBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/player"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_win" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_player"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView22" />

                <TextView
                    android:id="@+id/textView23"
                    style="@style/text24BoldBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/history_match"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rv_player" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_history_match"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView23" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</FrameLayout>